--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.9",
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.2",
+    "@iconify-json/fa-solid": "^1.2.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.14.3",
+    "astro": "^4.16.9",
+    "astro-icon": "^1.1.2",
+    "date-fns": "^4.1.0",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
 }
